<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CleanTimer</string>
    <string name="hi_text">Hi  \  </string>
    <string name="name_text">click the teacup!</string>
    <string name="clean_text">You\'ve been clean for:</string>
    <string name="counter_digits">00:00:00:00:00:00</string>
    <string name="counter_text">years \t  \ months \t \t days \t \t hours \t  \ minutes</string>
    <string name="years_text"> \ YY : \</string>
    <string name="months_text"> \ MM : \</string>
    <string name="hours_text"> \ HH : \</string>
    <string name="days_text"> \ DD : \</string>
    <string name="minutes_text"> \ MM : \</string>
    <string name="seconds_text"> \ SS \</string>
    <string name="settings_button">Set up</string>
    <string name="action_settings">Settings</string>
    <string name="set_time">Set date</string>
    <string name="set_name">Set name</string>
    <string name="show_days">View days</string>
    <string name="dialog_message">Please enter your name</string>
    <string name="dialog_title">Set name</string>
    <string name="ok_button">Set</string>
    <string name="cancel_button">Cancel</string>

</resources>
